# cicd

./: .pre-commit-config.yaml  README.md  main.tf  pyproject.toml
.github/workflows/: and_workflow.yml  brt_workflow.yml
src/: calculator.py  main.py
tests/: test_calculator.py  test_sum.py
