[tool.poetry]
name = "rootsacademy-cicd"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.1.0"
isort = "^5.10.1"
numpy = "^1.22.3"
toml = "^0.10.2"
argparse = "^1.4.0"
pytest = "^7.1.1"
pre-commit = "^2.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
